examples/test/testpolicy3415.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3415
  namespace: namespace173
spec:
  podSelector:
    matchLabels:
      key15: value49
      key26: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value36
          key32: value26
          key9: value37
      podSelector:
        matchLabels:
          key7: value13
